--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2679624 */
-  src: url('iconfont.woff2?t=1629526695431') format('woff2'),
-       url('iconfont.woff?t=1629526695431') format('woff'),
-       url('iconfont.ttf?t=1629526695431') format('truetype');
+  src: url('iconfont.woff2?t=1630915192524') format('woff2'),
+       url('iconfont.woff?t=1630915192524') format('woff'),
+       url('iconfont.ttf?t=1630915192524') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-user_account:before {
+  content: "\e65c";
 }
 
 .icon-changdi:before {
